# mcpc

./: Cargo.toml  README.md  install.bat  install.ps1  install.sh  mcp.spec.json  phases.txt
.github/workflows/: release.yml
.mcpc/plugins/: mcpc-plugin-linter.py
automata-mcp/: Cargo.toml  docker-compose.yml  manifest.json
automata-mcp/.mcpc/: cache.json
automata-mcp/agent/: Cargo.toml  Dockerfile
automata-mcp/agent/charts/: Chart.yaml  values.yaml
automata-mcp/agent/charts/templates/: deployment.yaml  networkpolicy.yaml
automata-mcp/agent/src/: main.rs
automata-mcp/background-job/: Cargo.toml  Dockerfile
automata-mcp/background-job/charts/: Chart.yaml  values.yaml
automata-mcp/background-job/charts/templates/: deployment.yaml  networkpolicy.yaml
automata-mcp/background-job/src/: main.rs
automata-mcp/control-plane/: Cargo.toml  Dockerfile
automata-mcp/control-plane/charts/: Chart.yaml  values.yaml
automata-mcp/control-plane/charts/templates/: deployment.yaml  networkpolicy.yaml
automata-mcp/control-plane/src/: main.rs
automata-mcp/gateway/: Cargo.toml  Dockerfile  seccomp.json
automata-mcp/gateway/charts/: Chart.yaml  values.yaml
automata-mcp/gateway/charts/templates/: deployment.yaml  networkpolicy.yaml  service.yaml
automata-mcp/gateway/src/: main.rs
mcpc-gui/: package-lock.json  package.json
mcpc-gui/src/: App.css  App.tsx  main.tsx
mcpc-gui/src-tauri/: Cargo.toml  tauri.conf.json
mcpc-gui/src-tauri/src/: lib.rs  main.rs
mcpc-gui/src/components/: CustomModuleNode.tsx  ExecutionPanel.tsx  GraphView.tsx  Marketplace.tsx  SpecEditor.tsx
src/: cache.rs  cli.rs  compose.rs  diagnostics.rs  diff.rs  errors.rs  executor.rs  fs.rs  generator.rs  graph.rs  hashing.rs  lib.rs  logging.rs  main.rs  manifest.rs  parser.rs  planner.rs  plugins.rs  schema.rs  shell.rs  templates.rs  validator.rs
src/commands/: audit.rs  build.rs  clean.rs  mod.rs  run.rs  validate.rs  worker.rs
templates/: agent_main.rs.hbs  api_main.rs.hbs  cargo_toml.hbs  default_main.rs.hbs  dockerfile.hbs  worker_main.rs.hbs
templates/helm/: Chart.yaml.hbs  deployment.yaml.hbs  networkpolicy.yaml.hbs  service.yaml.hbs  values.yaml.hbs
tests/: cli_tests.rs  integration.rs
