[package]
name = "mcpc"
version = "1.0.0"
edition = "2021"
description = "The MCP Compiler (mcpc) for generating and orchestrating cloud-native architectures."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "full"] }
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
clap = { version = "4.5", features = ["derive", "env"] }
handlebars = { version = "6", features = ["dir_source"] }
miette = { version = "7", features = ["fancy"] }
jsonschema = "0.17"
rust-embed = "8.5"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
