[package]
name = "mcpc"
version = "0.1.0"
edition = "2021"
description = "Declarative code generator and build orchestrator for automata-mcp distributed systems"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "full"] }
reqwest = { version = "0.13", features = ["blocking", "json"] }
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
handlebars = { version = "6.0", features = ["dir_source"] }
jsonschema = "0.17"
rust-embed = "8.0"
notify = { version = "8", features = ["serde"] }
sha2 = "0.10"
wasmi = "0.36"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[features]
default = []

[workspace]
resolver = "2"
members = ["mcpc-gui/src-tauri"]
